--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/styles/app.css" />
-    <script>
-      alert("It works!");
+    <script src="assets/scripts/app.js">
     </script>
   </head>
   <body>
