--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/styles/app.css" />
-    <script>
-      alert("It works!");
-    </script>
   </head>
   <body>
     <header>
@@ -32,5 +29,7 @@
       <h2 id="current-calculation">0</h2>
       <h2>Result: <span id="current-result">0</span></h2>
     </section>
+    <script src="assets/scripts/app.js">
+    </script>
   </body>
 </html>
